Fix comment side rectangles not showing on chrome

--- a/Firebase-project/src/app/forum-post/comment/comment.component.scss
+++ b/Firebase-project/src/app/forum-post/comment/comment.component.scss
@@ -22,7 +22,6 @@ p {
 .spacer {
   background-color: $medium-grey;
   width: 2px;
-  height: 100%;
   margin-left: 6px;
   margin-right: 6px;
 }
@@ -30,6 +29,7 @@ p {
 
 .spacer-hitbox {
   background-color: transparent;
-  width: 100%;
-  height: 100%;
+  cursor: pointer;
+  width: auto;
+  height: auto;
 }
